# ccmux-backend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.html  claude-code-compat.md  integration-prompts.md
docs/superpowers/plans/: 2026-04-19-parser-config-centralization.md  2026-04-19-parser-overrides.md  2026-04-20-claude-state-unification.md  2026-04-20-hook-pid-fallback.md  2026-04-28-event-log-self-heal.md  2026-05-05-extract-show-user-messages-and-split-env.md  2026-05-07-ccmux-state-log.md  2026-05-07-ccmux-state-snapshot.md
docs/superpowers/specs/: 2026-04-19-externalize-cc-constants-design.md  2026-04-19-parser-config-centralization-design.md  2026-04-20-claude-state-unification-design.md  2026-04-28-event-log-self-heal-design.md  2026-05-05-extract-show-user-messages-and-split-env-design.md  2026-05-07-auq-args-fallback-design.md  2026-05-07-ccmux-state-log-design.md  2026-05-07-depend-on-claude-code-state-design.md
src/ccmux/: __init__.py  api.py  backend.py  claude_files.py  claude_instance.py  claude_state.py  claude_transcript_parser.py  cli.py  config.py  event_log.py  hook.py  liveness.py  message_monitor.py  pane_extras.py  parser_config.py  parser_overrides.py  pid_session_resolver.py  state_log.py  state_monitor.py  status_monitor.py  tmux.py  tmux_pane_parser.py  util.py  window_bindings.py
tests/: conftest.py  fake_backend.py  test_api_smoke.py  test_backend_event_reader.py  test_backend_resume.py  test_claude_backend.py  test_claude_instance.py  test_claude_instance_overrides.py  test_claude_state.py  test_claude_transcript_parser.py  test_event_log.py  test_hook.py  test_integration_tmux.py  test_message_monitor.py  test_monitor_state.py  test_pane_extras.py  test_pane_state.py  test_parser_config.py  test_parser_overrides.py  test_pid_session_resolver.py  test_reconcile_instance.py  test_show_user_messages_removed.py  test_state_log.py  test_state_log_wiring.py  test_state_monitor.py  test_state_snapshot.py  test_tmux_pane_parser.py  test_verify_all.py
