[project]
name = "ccmux"
version = "5.1.1"
description = "Claude-tmux bridge: mirrors Claude Code sessions in tmux to a stable Python API"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "aiofiles>=24.0.0",
    "claude-code-state @ git+https://github.com/wuwenrui555/claude-code-state.git@v0.3.0",
    "libtmux>=0.37.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ccmux = "ccmux.cli:main"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required so the git+URL form of `claude-code-state` in
# [project].dependencies is accepted by hatchling.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ccmux"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ccmux"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "logger\\.",
]
